--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,8 @@
     "@nextui-org/react": "^2.2.10",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
+    "lucide": "^0.363.0",
+    "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
